--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -98,12 +98,12 @@ section {
 .container .content {
   width: 100%;
 }
-@media (min-width: 600px) {
+@media (min-width: 1100px) {
   section {
     padding: 0 16px;
     margin-left: 100px;
     margin-right: 100px;
-    max-width: 750px;
+    max-width: 900px;
   }
 }
 section.header {
@@ -335,7 +335,7 @@ section.main .container {
 }
 section.main .content {
   color: #111;
-  font-size: 1.2em;
+  font-size: 1.1em;
   font-family: Georgia, 'Times New Roman', Times, serif;
 }
 section.main .content .title-container {
@@ -371,12 +371,11 @@ section.main .content .title-container .initials a:hover {
   color: #333;
 }
 section.main .content .page-heading {
-  font-size: 18px;
+  font-size: 1.75rem;
   font-family: 'Raleway', 'Helvetica Neue', 'Arial', sans-serif;
   letter-spacing: -0.005rem;
   font-weight: 700;
   color: #333;
-  text-transform: uppercase;
   margin-bottom: 16px;
 }
 section.main .content .front-matter .page-heading {
@@ -576,7 +575,7 @@ section.main .content .markdown h3,
 section.main .content .markdown h4,
 section.main .content .markdown h5,
 section.main .content .markdown h6 {
-  font-size: 18px;
+  font-size: 1.5rem;
   font-family: 'Raleway', 'Helvetica Neue', 'Arial', sans-serif;
   letter-spacing: -0.005rem;
   font-weight: 700;
@@ -593,7 +592,7 @@ section.main .content .markdown h2 {
   margin-bottom: 1.5rem;
 }
 section.main .content .markdown h3 {
-  font-size: 1rem;
+  font-size: 1.3rem;
   margin-bottom: 1rem;
 }
 section.main .content .markdown h4,
@@ -639,7 +638,8 @@ section.main .content .markdown a code:hover {
 }
 section.main .content .markdown p {
   /* Invoked by line break */
-  font-size: 1rem;
+  font-size: 1.1em;
+  font-family: Georgia, 'Times New Roman', Times, serif;
   margin-top: 0;
   margin-bottom: 1em;
 }
