--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,10 +1,29 @@
 
 <nav class="nav">
   <div class="container">
-    <h1 class="logo"><a href="{{ '/' | prepend: site.baseurl | prepend: site.url }}">{{ site.title_left }}<span>{{ site.title_right }}</span></a></h1>
+    <h1 class="logo"><a href="{{ '/' | prepend: site.baseurl | prepend: site.url }}">{{ site.title_left }} <span>{{ site.title_right }}</span></a></h1>
     <ul class="navbar">
-      <li><a href="{{ '/about' | prepend: site.baseurl | prepend: site.url }}">About me</a></li>
+      <li>
+        <a href="{{ '/courses' | prepend: site.baseurl | prepend: site.url }}">
+          courses
+        </a>
+      </li>
+      <li>
+        <a href="{{ '/podcasts' | prepend: site.baseurl | prepend: site.url }}">
+          podcasts
+        </a>
+      </li>
+      <li>
+        <a href="{{ '/about' | prepend: site.baseurl | prepend: site.url }}">
+          about me
+        </a>
+      </li>
       <li><a href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" target="_blank">RSS</a></li>
+      <li>
+        <a href="https://store.dominicstpierre.com/login">
+          access your content
+        </a>
+      </li>
     </ul>
   </div>
 </nav>
